# practicas-uni

./: .examenes.swp  .exams.swp  .gitignore  .~lock.examenes.odt#  bar  compas  controles  examenes  examenes.odt  exams  horario  horario.txt  mierda  notas  pcd  sicue  todo
AEC/: .pipeline.swp  ejt2  pipeline
AED1/: .resumen.txt.swp  .~lock.tema3.pptx#  .~lock.tema4.pptx#  resumen.txt  tema1.pptx  tema2.pptx  tema3.pptx  tema4.pptx
AED2/: examen  notas
ALF/: compras.txt  indr2.py  sesion3.py  sesion4.regex  sesion6.py
AMD/: .sage.txt.swp  PracticasBasesyCoordenadasTarea.tex  sage.txt
BBDD/: RuizFernandezAngel-P0ej3.drawio  bd2215-Ruiz1Angel-p2-s5.sql  bd2215-RuizAngel-p2-s2.sql  bd2215-RuizAngel-p2-s3.sql  bd2215-esquema.sql  bd2215-p2-s4.sql  bdxxxx-p2-select.sql  bdxxyy-esquema.sql  bdxxyy-p2-sn.sql  bdxxyy-p3ej1-insert.sql  p1-dl-plantilla-DLS.docx
BD/: kepassa.drawio
COMP/: calculadora.y  entrada  examen  lex1  lex2  lexico1.l  main.c  primero_siguiente
Calculo/: tema4.txt
ETC/: actividad5.txt  bitmap.asm  mat_mult.asm  semana2.asm  syscall_test.asm
Estadistica/: .practica4.txt.swp  6.R  P7.txt  P8-9.txt  datosG1yG2.txt  practica2.txt  practica3.txt  practica4.R  practica6.R  tiempos.csv
FC/: practica_final_fc  representacion.txt
FFI/: .practica1.txt.swp  doble_onda filtro.ewb  doble_onda.ewb  media_onda.ewb  practica_6.odt
FLI/: .L1SAT.swp  .~lock.informe1.odt#  L1SAT  PracticaL1.odt  ejsl1.odt  informe1.odt  (+2 more)
POO/sesion3/: CMakeLists.txt  README.md
POO/sesion3/src/geometria/: Direction.java  Point.java  Punto.java  Rectangulo.java
(+1312 files in other folders)
